--- a/Marysia_To_Miła_Starsza_Pani/Marysia_To_Miła_Starsza_Pani.vcxproj
+++ b/Marysia_To_Miła_Starsza_Pani/Marysia_To_Miła_Starsza_Pani.vcxproj
@@ -145,10 +145,14 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Character.h" />
+    <ClInclude Include="CharacterEditor.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Character.cpp" />
+    <ClCompile Include="CharacterEditor.cpp" />
     <ClCompile Include="Marysia_To_Miła_Starsza_Pani.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
