--- a/Marysia_To_Miła_Starsza_Pani/Marysia_To_Miła_Starsza_Pani.vcxproj.filters
+++ b/Marysia_To_Miła_Starsza_Pani/Marysia_To_Miła_Starsza_Pani.vcxproj.filters
@@ -24,12 +24,24 @@
     <ClInclude Include="targetver.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Character.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="CharacterEditor.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Marysia_To_Miła_Starsza_Pani.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Character.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="CharacterEditor.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
